made website responsive
made the website responsive on tablets and mobile devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <main>
-        <h1 class="title"><span class="special">Meeet New <br /> 
+        <h1 class="title"><span class="special">Meet New <br /> 
             Entrepre</span><span>neurs</span></h1>
         
         <p class="info">Meeet is a new social media platform for entrepreneurs to connect and socialize.</p>
